# antigravity-remote

./: .gitignore  LICENSE  README.md  README_ko.md  test_dispatch.js
client/: pyproject.toml  textarea_help.txt
client/agbridge_tui/: __init__.py  app.py  connection.py  permissions.py  styles.tcss  workspace_manager.py
client/agbridge_tui/modals/: __init__.py  confirm_modal.py  conversation_modal.py  file_explorer_modal.py  input_modal.py  mention_picker_modal.py  select_modal.py  text_viewer.py
client/agbridge_tui/panels/: __init__.py  agent_panel.py  command_palette.py  event_log.py  explorer.py  file_menu.py  git_panel.py  nav_bar.py  settings_panel.py  status_header.py  system_alert.py  workspace_list.py
server/: README.md  analyze_buttons.py  parse_dom_accounting.py  pyproject.toml  scratch.py  scratch2.py  scratch3.py  scratch4.py  scratch5.py  scratch6.py  scratch_clip_test.py  test_all_send_buttons.py  test_buttons.py  test_cdp.py  test_editor_text.py  test_empty_loop.py  test_find_editor.py  test_lexical.py  test_lexical_editors.py  test_scraper.py  test_verify_submit.py
server/agbridge/: __init__.py  api.py  auth.py  config.py  diagnostics.py  engine.py  ide_monitor.py  input_queue.py  main.py  protocol.py  state_store.py  ui_locators.json  window_discovery.py  workspace_supervisor.py
server/agbridge/actions/: __init__.py  controls.py  conversation.py  model.py  permission.py  prompt.py  registry.py
server/agbridge/cdp/: __init__.py  bridge.py  port_allocator.py  selectors.py
server/agbridge/collectors/: __init__.py  ax_polling.py  ax_scraper.py  (+5 more)
(+37 files in other folders)
